Left/Right vertex weights flipped #30281

Closed
opened 2012-02-20 20:33:11 +01:00 by Jason van Gumster · 5 comments

%%%Open the attached .blend file in a pre-bmesh version of Blender (2.62 official should be fine) to see the expected behavior by rotating one of the arm bones. Open the same .blend file a version of Blender after the bmesh merge and you should notice that the influences are flipped. The right arm bone deforms the left arm on the mesh and vice versa. My suspicion is that this stems from the fact that the armature is deforming a mesh with a mirror modifier on it. However, it works properly in Blender prior to bmesh, so the expected behavior is that this will continue to work properly.

This can be resolved in the .blend file with a simple python script that switches the names of all of the .R and .L vertex groups... however I'd rather not have to run that script on every .blend file where I encounter this problem.%%%

%%%Open the attached .blend file in a pre-bmesh version of Blender (2.62 official should be fine) to see the expected behavior by rotating one of the arm bones. Open the same .blend file a version of Blender after the bmesh merge and you should notice that the influences are flipped. The right arm bone deforms the left arm on the mesh and vice versa. My suspicion is that this stems from the fact that the armature is deforming a mesh with a mirror modifier on it. However, it works properly in Blender prior to bmesh, so the expected behavior is that this will continue to work properly. This can be resolved in the .blend file with a simple python script that switches the names of all of the .R and .L vertex groups... however I'd rather not have to run that script on every .blend file where I encounter this problem.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I encountered the similar problem but in my case the vertices data become utterly broken. (I don't know if this is exactly the same or not.)

Please load the following file (This is the famous "Hatsune Miku" model in Japan):

http://kiomodel.sakura.ne.jp/modeldata/KioMiku_blender_20091010.zip

The right/left vertices of the hair and the skirt should be flipped.
%%%

%%%I encountered the similar problem but in my case the vertices data become utterly broken. (I don't know if this is exactly the same or not.) Please load the following file (This is the famous "Hatsune Miku" model in Japan): http://kiomodel.sakura.ne.jp/modeldata/KioMiku_blender_20091010.zip The right/left vertices of the hair and the skirt should be flipped. %%%

%%%Fixed in svn44299.

Was indeed Mirror modifier flipping vgroups on original vertices instead of mirrored one… And poor Miku gets back her hair and skirt too, so it was indeed the same problem!

Closing, thanks for reporting. :)%%%

%%%Fixed in svn44299. Was indeed Mirror modifier flipping vgroups on original vertices instead of mirrored one… And poor Miku gets back her hair and skirt too, so it was indeed the same problem! Closing, thanks for reporting. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

%%%Thanks, Bastien.

BTW, typing Alt+A in the Miku's blend file starts the animation, but the collision doesn't work at all. Probably this is the same as [#30268] because Miku's hair and skirt use the cloth collision.
%%%

%%%Thanks, Bastien. BTW, typing Alt+A in the Miku's blend file starts the animation, but the collision doesn't work at all. Probably this is the same as [#30268] because Miku's hair and skirt use the cloth collision. %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30281
No description provided.