Fix [#30281] Left/Right vertex weights flipped.

Mirror modifier was flipping vgroups on org vertices, not mirrored ones!